--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 
 
-    <div class="hero md:flex md:flex-row">
-        <div class=" hero_conta">
+    <div class="hero md:flex md:flex-row ">
+        <div class=" hero_conta ">
             <h1 class="hero_conta-h1">Hi Welcome to my hut</h1>
             <p class="hero_conta-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident possimus quidem dolore rerum, est vitae dicta dignissimos, aperiam reprehenderit fugiat odio iusto totam praesentium officia tempore pariatur corporis, dolores nisi et? Deserunt, quo. Molestias ipsam velit fugiat inventore accusamus. Accusantium aliquid iste sint quae cum eum reprehenderit, ab, earum veniam debitis expedita perferendis odio ex. Quaerat ullam doloremque iste corrupti.</p>
             <div class="hero_conti">
@@ -72,8 +72,8 @@
             <image src="image/cv.jpg" class="card_image-img">
         </div>
         <div class="card_p">
-            <h1>Setiawan Jodi</h1>
-            <p>Fullstack Developer</p>
+            <h1 >Setiawan Jodi</h1>
+            <p class="font-bold">Fullstack Developer</p>
         </div>
     </div>
     </div>
