--- a/testimonials.html
+++ b/testimonials.html
@@ -45,8 +45,8 @@
 
 
     <!----------- PROJECT START  ------------->
-    <div class="py-20">
-        <h1 class="text-5xl font-bold text-center">My Testimonials</h1>
+    <div class="pt-20">
+        <h1 class="text-5xl font-bold text-center r">My Testimonials</h1>
     </div>
     <a href="InProject.html" class="crd_grid flex flex-col md:grid xl:grid md:grid-cols-2 xl:grid-cols-3" id="text2"></a>
     <!----------- PROJECT END  ------------->
