--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </nav>
 
     <!---- BURGER ----->
-    <div class="bg-white  rounded-lg w-[15rem] h-auto py-10 right-0 absolute merah shadow-xl">
-        <ul class="flex justify-center flex-col text-4xl gap-y-5 items-center mx-auto ">
-            <li class="cursor-pointer w-full pl-2   hover:opacity-50"><a href="index.html">Home</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="project.html">My Project</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="contact.html">Contact</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="testimonials.html">Testimonal</a></li>
+    <div class="burger merah ">
+        <ul class="burger_ul ">
+            <li class="burger_li"><a href="index.html">Home</a></li>
+            <li class="burger_li"><a href="project.html">My Project</a></li>
+            <li class="burger_li"><a href="contact.html">Contact</a></li>
+            <li class="burger_li"><a href="contact.html">Terimonials</a></li>
         </ul>
     </div>
 
