--- a/project.html
+++ b/project.html
@@ -21,7 +21,6 @@
                 <img src="image/logoDmb.png" class="header_lft-img" alt="Logo" />
                 <a href="index.html" class="header_lft-h1 hidden md:flex">Home</a>
                 <a href="project.html" class="header_lft-p hidden md:flex">My Project</a>
-                <a href="testimonials.html" class="header_lft-p hidden md:flex">Testimonal</a>
             </div>
     
             <div class="header_grp2">
@@ -33,12 +32,12 @@
     </nav>
 
     <!---- BURGER ----->
-    <div class="bg-white  rounded-lg w-[15rem] h-auto py-10 right-0 absolute merah shadow-xl">
-        <ul class="flex justify-center flex-col text-4xl gap-y-5 items-center mx-auto ">
-            <li class="cursor-pointer w-full pl-2   hover:opacity-50"><a href="index.html">Home</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="project.html">My Project</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="contact.html">Contact</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="testimonials.html">Testimonal</a></li>
+    <div class="burger merah ">
+        <ul class="burger_ul ">
+            <li class="burger_li"><a href="index.html">Home</a></li>
+            <li class="burger_li"><a href="project.html">My Project</a></li>
+            <li class="burger_li"><a href="contact.html">Contact</a></li>
+            <li class="burger_li"><a href="contact.html">Terimonials</a></li>
         </ul>
     </div>
 
@@ -119,7 +118,7 @@
                 </div>
             </div>
             <!--Uploud End-->
-            <div class="flex flex-row justify-end gap-x-5">
+            <div class="flex flex-row justify-end">
                 <button class="px-6 py-1 text-white bg-[#111626] rounded-full text-center hover:bg-white hover:text-black border border-black transition duration-500 my-5 text-lg font-bold hover:shadow-lg bt" >submit</button>
                 <button id="clear-button" type="button" class="px-6 py-1 text-white bg-[#111626] rounded-full text-center hover:bg-white hover:text-black border border-black transition duration-500 my-5 text-lg font-bold hover:shadow-lg bt">Clear</button>
 
@@ -160,7 +159,7 @@
             </div>
         </div>
 
-        <a href="InProject.html" class="crd_grid flex flex-col md:grid xl:grid md:grid-cols-2 xl:grid-cols-3 " id="test2"></a>
+        <a href="InProject.html" class="crd_grid card_push" id="test2"></a>
 
         
     </div>
