--- a/testimonials.html
+++ b/testimonials.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/project.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/testi.css">
     
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -34,21 +35,21 @@
     </nav>
 
     <!---- BURGER ----->
-    <div class="bg-white  rounded-lg w-[15rem] h-auto py-10 right-0 absolute merah shadow-xl">
-        <ul class="flex justify-center flex-col text-4xl gap-y-5 items-center mx-auto ">
-            <li class="cursor-pointer w-full pl-2   hover:opacity-50"><a href="index.html">Home</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="project.html">My Project</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="contact.html">Contact</a></li>
-            <li class="cursor-pointer w-full pl-2 hover:opacity-50"><a href="testimonials.html">Testimonal</a></li>
+    <div class="burger merah ">
+        <ul class="burger_ul ">
+            <li class="burger_li"><a href="index.html">Home</a></li>
+            <li class="burger_li"><a href="project.html">My Project</a></li>
+            <li class="burger_li"><a href="contact.html">Contact</a></li>
+            <li class="burger_li"><a href="contact.html">Terimonials</a></li>
         </ul>
     </div>
 
 
     <!----------- PROJECT START  ------------->
     <div class="pt-20">
-        <h1 class="text-5xl font-bold text-center r">My Testimonials</h1>
+        <h1 class="inproject r">My Testimonials</h1>
     </div>
-    <a href="InProject.html" class="crd_grid flex flex-col md:grid xl:grid md:grid-cols-2 xl:grid-cols-3" id="text2"></a>
+    <a href="InProject.html" class="crd_grid inproject1" id="text2"></a>
     <!----------- PROJECT END  ------------->
     <script src="js/darkmode.js"></script>
     <script src="js/responsive.js"></script>
